Covering full map exlcuding turning column issues: